# corp_finance

./: .env.example  .gitignore  .mcp.json  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json  turbo.json
crates/corp-finance-cli/: Cargo.toml
crates/corp-finance-cli/src/: main.rs
crates/corp-finance-cli/src/commands/: aml_compliance.rs  bank_analytics.rs  behavioral.rs  capital_allocation.rs  carbon_markets.rs  clo_analytics.rs  commodity_trading.rs  compliance.rs  convertibles.rs  credit.rs  credit_derivatives.rs  credit_portfolio.rs  credit_scoring.rs  crypto.rs  derivatives.rs  dividend_policy.rs  earnings_quality.rs  emerging_markets.rs  equity_research.rs  esg.rs  fatca_crs.rs  financial_forensics.rs  fixed_income.rs  fpa.rs  fund_of_funds.rs  fx_commodities.rs  index_construction.rs  inflation_linked.rs  infrastructure.rs  insurance.rs  interest_rate_models.rs  jurisdiction.rs  lease_accounting.rs  ma.rs  macro_economics.rs  market_microstructure.rs  mod.rs  monte_carlo.rs  mortgage_analytics.rs  municipal.rs  (+34 more)
crates/corp-finance-cli/src/input/: file.rs  mod.rs  stdin.rs
crates/corp-finance-cli/src/output/: csv_out.rs  json.rs  minimal.rs  mod.rs  table.rs
crates/corp-finance-core/: Cargo.toml
crates/corp-finance-core/src/: error.rs  lib.rs  time_value.rs  types.rs
crates/corp-finance-core/src/aml_compliance/: kyc_scoring.rs  mod.rs  sanctions_screening.rs
crates/corp-finance-core/src/bank_analytics/: camels.rs  cecl_provisioning.rs  deposit_beta.rs  loan_book.rs  mod.rs  nim_analysis.rs
crates/corp-finance-core/src/behavioral/: mod.rs  prospect_theory.rs  sentiment.rs
crates/corp-finance-core/src/capital_allocation/: economic_capital.rs  euler_allocation.rs  limit_management.rs  mod.rs  raroc.rs  shapley_allocation.rs
crates/corp-finance-core/src/carbon_markets/: carbon_pricing.rs  cbam.rs  ets_compliance.rs  mod.rs  offset_valuation.rs  shadow_carbon.rs
crates/corp-finance-core/src/clo_analytics/: coverage_tests.rs  mod.rs  reinvestment.rs  scenario.rs  tranche_analytics.rs  waterfall.rs
crates/corp-finance-core/src/commodity_trading/: mod.rs  spreads.rs  storage.rs
crates/corp-finance-core/src/compliance/: best_execution.rs  mod.rs  reporting.rs
crates/corp-finance-core/src/convertibles/: analysis.rs  mod.rs  pricing.rs
crates/corp-finance-core/src/credit/: altman.rs  capacity.rs  covenants.rs  metrics.rs  mod.rs
crates/corp-finance-core/src/credit_derivatives/: cds.rs  cva.rs  mod.rs
crates/corp-finance-core/src/credit_portfolio/: migration.rs  mod.rs  portfolio_risk.rs
crates/corp-finance-core/src/credit_scoring/: calibration.rs  intensity_model.rs  mod.rs  scorecard.rs  structural_model.rs  validation.rs
crates/corp-finance-core/src/crypto/: defi.rs  mod.rs  valuation.rs
crates/corp-finance-core/src/derivatives/: forwards.rs  mod.rs  options.rs  strategies.rs  swaps.rs
crates/corp-finance-core/src/dividend_policy/: buyback.rs  h_model.rs  mod.rs  multistage_ddm.rs  payout_sustainability.rs  total_shareholder_return.rs
crates/corp-finance-core/src/earnings_quality/: accrual_quality.rs  beneish.rs  composite.rs  mod.rs  piotroski.rs  revenue_quality.rs
crates/corp-finance-core/src/emerging_markets/: capital_controls.rs  country_risk_premium.rs  em_bond_analysis.rs  em_equity_premium.rs  mod.rs  political_risk.rs
crates/corp-finance-core/src/equity_research/: mod.rs  sotp.rs  target_price.rs
crates/corp-finance-core/src/esg/: mod.rs  (+2 more)
crates/corp-finance-core/tests/: credit_tests.rs  pe_tests.rs  portfolio_tests.rs  valuation_tests.rs
(+344 files in other folders)
