[package]
name = "corp-finance-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Institutional-grade corporate finance calculations with decimal precision"

[features]
default = ["valuation", "credit"]
valuation = []
credit = []
pe = []
ma = []
portfolio = []
fixed_income = []
three_statement = []
jurisdiction = []
derivatives = []
quant_risk = []
restructuring = []
real_assets = []
fx_commodities = []
securitization = []
venture = []
esg = []
regulatory = []
insurance = []
private_credit = []
fpa = []
wealth = []
crypto = []
trade_finance = []
structured_products = []
municipal = []
credit_derivatives = []
convertibles = []
lease_accounting = []
pension = []
sovereign = []
real_options = []
equity_research = []
commodity_trading = []
scenarios = ["dep:rand", "dep:statrs"]
monte_carlo = ["scenarios"]
full = ["valuation", "credit", "pe", "ma", "portfolio", "fixed_income", "three_statement", "jurisdiction", "scenarios", "monte_carlo", "derivatives", "quant_risk", "restructuring", "real_assets", "fx_commodities", "securitization", "venture", "esg", "regulatory", "insurance", "private_credit", "fpa", "wealth", "crypto", "trade_finance", "structured_products", "municipal", "credit_derivatives", "convertibles", "lease_accounting", "pension", "sovereign", "real_options", "equity_research", "commodity_trading"]

[dependencies]
rust_decimal = { version = "1", features = ["serde-with-str", "maths"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", optional = true }
statrs = { version = "0.17", optional = true }

[dev-dependencies]
pretty_assertions = "1"
